--- a/treeData.html
+++ b/treeData.html
@@ -59,7 +59,7 @@
     </script>
 
 <section id="weather-section">
-  <h2 class="section-title">Data from Sugar Maple</h2>
+  <h2 class="section-title">Data from Harbin Sugar Maple</h2>
   
 
   
@@ -84,6 +84,15 @@
       <canvas id='LDchart'></canvas>
     </div>
   </div>
+
+
+ <!-- PLACEHOLDER FOR SAPFLOW CHART -->
+  <!-- <div class="graph-grid">
+    <div class="chart-wrapper" onclick="toggleExpand(this)">
+      <button class="close-btn" onclick="event.stopPropagation(); this.parentElement.classList.remove('expanded')">✕</button>
+      <canvas id='sapflowchart' ></canvas>
+    </div>
+  </div> -->
 
   <div class="graph-grid">
     
