--- a/team.html
+++ b/team.html
@@ -107,6 +107,14 @@
         </p>
       </div>
     </div>
+
+    <div class="team-member">
+    <img src="IMG_15EAD698D855-1.jpeg" alt="Florence Cheung photo">
+    <div>
+      <h4>Florence Cheung</h4>
+      <p>Undergraduate student at Georgetown university majoring in science, technology, and international affairs with a minor in Australian, New Zealand, and Pacific studies.</p>
+    </div>
+  </div>
     
   </section>
 </body>
