--- a/team.html
+++ b/team.html
@@ -112,7 +112,7 @@
     <img src="IMG_15EAD698D855-1.jpeg" alt="Florence Cheung photo">
     <div>
       <h4>Florence Cheung</h4>
-      <p>Undergraduate student at Georgetown university majoring in science, technology, and international affairs with a minor in Australian, New Zealand, and Pacific studies.</p>
+      <p>Undergraduate student at Georgetown University majoring in Science, Technology, and International Affairs with a minor in Australian, New Zealand, and Pacific Studies.</p>
     </div>
   </div>
     
