--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
     <div class="card">
       <h4>Urban Tree Ecophysiology Network</h4>
-      <p>The Urban Trees Ecophysiology Network (UTEN) is a network of researchers aiming to understand the urban trees response to climate change.</p>
+      <p>The Urban Trees Ecophysiology Network (UTEN) is a network of researchers aiming to understand the urban trees response to climate change.
+        We currently have sensors deployed in Washington, D.C. on the Georgetown campus.
+      </p>
       <nav>
         <a href="treeData.html">View Live Data →</a>
       </nav>
