--- a/treeData.html
+++ b/treeData.html
@@ -87,12 +87,12 @@
 
 
  <!-- PLACEHOLDER FOR SAPFLOW CHART -->
-  <!-- <div class="graph-grid">
+  <div class="graph-grid">
     <div class="chart-wrapper" onclick="toggleExpand(this)">
       <button class="close-btn" onclick="event.stopPropagation(); this.parentElement.classList.remove('expanded')">✕</button>
       <canvas id='sapflowchart' ></canvas>
     </div>
-  </div> -->
+  </div>
 
   <div class="graph-grid">
     
