--- a/treeData.html
+++ b/treeData.html
@@ -231,7 +231,6 @@
                 beginAtZero: false,
                 title: { display: true, text: label }
               }
-  }
             },
             plugins: {
               title: {
@@ -363,7 +362,7 @@
             `;
             tableBody.appendChild(tr);
           });
-    
+    //--------------------build api weather dataset--------------------
           if (!Array.isArray(apiData) || apiData.length === 0) {
             throw new Error("Weather data is empty or not in expected format");
           }
@@ -388,7 +387,7 @@
             y: d.solar_rad_avg
           }));
 
-//--------------------build sapflow weather chart--------------------
+//--------------------build sapflow dataset--------------------
           const headers = sapData.values[0]; // First row = column headers
           const dataRows = sapData.values.slice(1); // Skip header
 
@@ -426,6 +425,8 @@
           yAxisID: 'y1' // secondary axis
         });
 
+
+      //--------------------draw charts--------------------
 
           drawChart("sapflowchart", "Sap Flow Sensors", datasets, true);
 
