--- a/treeData.html
+++ b/treeData.html
@@ -218,20 +218,28 @@
             responsive: true,
             maintainAspectRatio: false,
             scales: {
-              x: {
-                type: 'time',
-                time: {
-                  unit: 'day',
-                  displayFormats: { day: 'MMM d, HH:mm' }
-                },
-                ticks: { maxRotation: 0, autoSkip: true, font: { size: 12 } },
-                title: { display: true, text: 'Time', font: { size: 16 } }
-              },
-              y: {
-                beginAtZero: false,
-                title: { display: true, text: label }
-              }
+          x: {
+            type: 'time',
+            time: {
+              unit: 'minute',
+              displayFormats: { minute: 'MMM d, HH:mm' }
             },
+            ticks: { maxRotation: 0, autoSkip: true, font: { size: 12 } },
+            title: { display: true, text: 'Time', font: { size: 16 } }
+          },
+          y: {
+            type: 'linear',
+            position: 'left',
+            title: { display: true, text: 'Sapflow' }
+          },
+          y1: {
+            type: 'linear',
+            position: 'right',
+            grid: { drawOnChartArea: false },
+            title: { display: true, text: 'Pulse Number' }
+          }
+        },
+
             plugins: {
               title: {
                 display: true,
@@ -398,6 +406,8 @@
             label,
             index: headers.indexOf(label)
           }));
+
+          const colors = ['#ef4444', '#3b82f6', '#10b981', '#f59e0b']; // sapflow0–3
 
           sapflowIndices.forEach(({ label, index }, i) => {
           const data = dataRows.map(row => ({
