--- a/treeData.html
+++ b/treeData.html
@@ -425,7 +425,7 @@
 
       //--------------------draw charts--------------------
 
-          drawChart("sapflowchart", "Sap Flow Sensors", datasets, true);
+          drawChart("sapflowchart", "Sap Flow Sensors", datasets, false);
 
     
     
