--- a/treeData.html
+++ b/treeData.html
@@ -416,7 +416,7 @@
           label,
           data,
           color: colors[i],
-          yAxisID: 'y'
+          // yAxisID: 'y'
         });
       });
 
@@ -427,8 +427,6 @@
 
           drawChart("sapflowchart", "Sap Flow Sensors", datasets, false);
 
-    
-    
           drawChart("combinedTempChart", "Temperature (°C)", [
             { label: "Local Temperature", data: sensorData["temperature"], color: "#f97316" },
             { label: "Weather API Temperature", data: weatherTemp, color: "#3b82f6" }
