logging sap Dataset

--- a/treeData.html
+++ b/treeData.html
@@ -297,7 +297,7 @@
        ])
         .then(([localData, apiData, sapData]) => {
           
-          console.log("Sap Data:", sapData);
+          // console.log("Sap Data:", sapData);
       
 
           const rows = localData.values;
@@ -420,6 +420,7 @@
         });
       });
 
+      console.log("Sapflow datasets:", datasets);
 
 
 
