--- a/treeData.html
+++ b/treeData.html
@@ -224,13 +224,13 @@
               unit: 'minute',
               displayFormats: { minute: 'MMM d, HH:mm' }
             },
-            ticks: { maxRotation: 0, autoSkip: true, font: { size: 12 } },
+            ticks: { maxRotation: 45, autoSkip: true, font: { size: 12 } },
             title: { display: true, text: 'Time', font: { size: 16 } }
           },
           y: {
             type: 'linear',
             position: 'left',
-            title: { display: true, text: 'Sapflow' }
+            title: { display: true, text: label }
           },
         },
 
