--- a/index.html
+++ b/index.html
@@ -27,35 +27,34 @@
     </section>
 
 
-  <!-- Projects Section -->
-  <section id="projects">
-    <h3 class="section-title">Projects</h3>
+ <!-- Projects Section -->
+ <section id="projects">
+  <h3 class="section-title">Projects</h3>
 
-    <div class="card">
-      <h4>Urban Tree Ecophysiology Network</h4>
-      <p>The Urban Trees Ecophysiology Network (UTEN) is a network of researchers aiming to understand the urban trees response to climate change.
-        We currently have sensors deployed in Washington, D.C. on the Georgetown campus.
-      </p>
-      <nav>
-        <a href="treeData.html">View Live Data →</a>
-      </nav>
-    </div>
+  <a href="treeData.html" class="card" >
+    <h4>Urban Tree Ecophysiology Network</h4>
+    <p>The Urban Trees Ecophysiology Network (UTEN) is a network of researchers aiming to understand the urban trees response to climate change.</p>
+    <nav>
+      <p style="color:#38bdf8;">View Live Data → </p>
+    </nav>
+    </a>
+  
 
-    <div class="card">
-      <h4>OCO-2 and Solar Induced Flourescence (SIF) </h4>
-      <p>
-        The Orbiting Carbon Observatory-2 (OCO-2) is capable of measuring Solar-Induced chlorophyll Fluorescence (SIF). 
-        SIF helps us understand terrestrial photosynthesis which furthers our understanding of carbon dioxide in our atmosphere. </p>
-    </div>
+  <a class="card" href="SIF.html">
+    <h4>OCO-2 and Solar Induced Flourescence (SIF) </h4>
+    <p>
+      The Orbiting Carbon Observatory-2 (OCO-2) is capable of measuring Solar-Induced chlorophyll Fluorescence (SIF). 
+      SIF helps us understand terrestrial photosynthesis which furthers our understanding of carbon dioxide in our atmosphere. </p>
+  </a>
 
-    <div class="card">
-      <h4>Ribbonized Sap Flow Sensor </h4>
-      <p>
-        The Ribbonized Sap Flow (RSF) sensor is a novel design for measuring sap flow in trees.
-        It is designed to be low-cost, easy to deploy, and capable of long-term monitoring of tree water use.
-         </p>
-    </div>
-
+  <a class="card" href="RSF.html">
+    <h4>Ribbonized Sap Flow Sensor </h4>
+    <p>
+      The Ribbonized Sap Flow (RSF) sensor is a novel design for measuring sap flow in trees.
+      It is designed to be low-cost, easy to deploy, and capable of long-term monitoring of tree water use.
+       </p>
+    </a>
+  
     
 
   <!-- Team Section -->
