--- a/treeData.html
+++ b/treeData.html
@@ -19,6 +19,9 @@
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
       <a href="team.html">Team</a>
+      <a href=" https://bsky.app/profile/treesrawesome.bsky.social" target="_blank" class="bsky-link">
+        <img src="bluesky-circle-logo-icon-bluesky-app-editable-transparent-background-premium-social-media-design-for-digital-download-free-png.png" width="50" alt="Bluesky Logo" class="bsky-logo">
+      </a>
     </nav>
   </header>
   <section class="hero">
@@ -57,6 +60,8 @@
           .openPopup();
       });
     </script>
+
+   
 
     <section class="carousel-section">
   <div class="carousel">
