--- a/treeData.html
+++ b/treeData.html
@@ -355,10 +355,8 @@
             sensorData[key].sort((a, b) => a.x - b.x);
           }
           
-        const recentData = {};
-          for (const key in sensorData) {
-            recentData[key] = sensorData[key].slice(-200)[0];
-          }
+        
+          const recentData = sensorData.slice(-1000);
           console.log(recentData);
 
           // --- Build local data table ---
@@ -403,25 +401,25 @@
             x: new Date(d.ts * 1000),
             y: (d.temp_out - 32) * 5 / 9 // Convert from °F to °C
           }));
-          recentWeatherTemp = weatherTemp[weatherTemp.length - 200];
+          recentWeatherTemp = weatherTemp[weatherTemp.length - 1000];
 
           const weatherHum = apiData.map(d => ({
             x: new Date(d.ts * 1000),
             y: d.hum_out
           }));
-          recentWeatherHum = weatherHum[weatherHum.length - 200];
+          recentWeatherHum = weatherHum[weatherHum.length - 1000];
 
           const weatherRainfall = apiData.map(d => ({
             x: new Date(d.ts * 1000),
             y: d.rainfall_mm
           }));
-          recentWeatherRainfall = weatherRainfall[weatherRainfall.length - 200];
+          recentWeatherRainfall = weatherRainfall[weatherRainfall.length - 1000];
 
           const weatherSolar = apiData.map(d => ({
             x: new Date(d.ts * 1000),
             y: d.solar_rad_avg
           }));
-          recentWeatherSolar = weatherSolar[weatherSolar.length - 200];
+          recentWeatherSolar = weatherSolar[weatherSolar.length - 1000];
 
           console.log(recentWeatherTemp);
           console.log(recentWeatherHum);
