--- a/treeData.html
+++ b/treeData.html
@@ -406,7 +406,8 @@
               x: new Date(d.ts * 1000),
               y: (d.temp_out - 32) * 5 / 9 // Convert from °F to °C
             }));
-          recentWeatherTemp = weatherTemp.slice(-1000);
+            recentWeatherTemp = weatherTemp[weatherTemp.length - 1000];
+
 
           const weatherHum = apiData
             .filter(d => d.hum_out !== null && d.hum_out !== undefined && d.hum_out !== '' && !isNaN(d.hum_out))
@@ -414,7 +415,7 @@
               x: new Date(d.ts * 1000),
               y: d.hum_out
             }));
-          recentWeatherHum = weatherHum.slice(-1000);
+          recentWeatherHum = weatherHum[weatherHum.length - 1000];
 
           const weatherRainfall = apiData
             .filter(d => d.rainfall_mm !== null && d.rainfall_mm !== undefined && d.rainfall_mm !== '' && !isNaN(d.rainfall_mm))
@@ -422,7 +423,7 @@
               x: new Date(d.ts * 1000),
               y: d.rainfall_mm
             }));
-          recentWeatherRainfall = weatherRainfall.slice(-1000);
+          recentWeatherRainfall = weatherRainfall[weatherRainfall.length - 1000];
 
           const weatherSolar = apiData
             .filter(d => d.solar_rad_avg !== null && d.solar_rad_avg !== undefined && d.solar_rad_avg !== '' && !isNaN(d.solar_rad_avg))
@@ -430,7 +431,7 @@
               x: new Date(d.ts * 1000),
               y: d.solar_rad_avg
             }));
-          recentWeatherSolar = weatherSolar.slice(-1000);
+          recentWeatherSolar = weatherSolar[weatherSolar.length - 1000];
 
           
 //--------------------build sapflow dataset--------------------
