battery voltage fix again

--- a/treeData.html
+++ b/treeData.html
@@ -358,7 +358,7 @@
         
           const recentData = {};
           for (const key in sensorData) {
-            if (key != batteryVoltage){
+            if (key != "battery voltage"){
               recentData[key] = sensorData[key].slice(-1000);
             }
           }
