--- a/treeData.html
+++ b/treeData.html
@@ -490,7 +490,7 @@
             { label: "Battery Voltage", data: recentData["battery voltage"], color: "#22c55e" }
           ]);
 
-          const latestBatteryVoltage = parseFloat(sensorData["battery voltage"]?.y || 0);
+          const latestBatteryVoltage = parseFloat(sensorData["battery voltage"].slice(-1)[0]?.y || 0);
           drawBatteryChart('batteryPercent', latestBatteryVoltage);
 
           drawChart('weatherRainfall', "Rainfall (mm)", [
