--- a/treeData.html
+++ b/treeData.html
@@ -481,11 +481,11 @@ const recentWeatherSolar = weatherSolar[weatherSolar.length - 1000];
           drawBatteryChart('batteryPercent', latestBatteryVoltage);
 
           drawChart('weatherRainfall', "Rainfall (mm)", [
-            { label: "Rainfall", data: recentWeatherRainfall, color: "#0ea5e9" }
+            { label: "Rainfall", data: WeatherRainfall, color: "#0ea5e9" }
           ]);
 
           drawChart('weatherSolar', "Solar Radiation (watts per square meter)", [
-            { label: "Solar Radiation", data: recentWeatherSolar, color: "#ffde21" }
+            { label: "Solar Radiation", data: WeatherSolar, color: "#ffde21" }
           ]);
 
           // drawChart("sapflowchart", "Sap Flow (cm/hr)", datasets, false);
