--- a/treeData.html
+++ b/treeData.html
@@ -180,6 +180,24 @@
 
 <!-- ================== Chart + Data Script ================== -->
 <script>
+      // Global plugin: show message if no valid data
+    Chart.register({
+      id: 'noDataPlugin',
+      afterDraw(chart) {
+        if (!chart.data.datasets.length || chart.data.datasets.every(ds => !ds.data || ds.data.length === 0)) {
+          const { ctx, chartArea } = chart;
+          const message = 'No valid data available';
+          ctx.save();
+          ctx.textAlign = 'center';
+          ctx.textBaseline = 'middle';
+          ctx.fillStyle = '#9ca3af'; // gray-400
+          ctx.font = '16px sans-serif';
+          ctx.fillText(message, (chartArea.left + chartArea.right) / 2, (chartArea.top + chartArea.bottom) / 2);
+          ctx.restore();
+        }
+      }
+    });
+
   const drawChart = (canvasId, label, datasets, { useGradient = false, spanGaps = true } = {}) => {
     const canvas = document.getElementById(canvasId);
     if (!canvas) return console.warn(`Canvas not found: ${canvasId}`);
@@ -210,11 +228,7 @@
       };
     });
 
-    if (!formattedDatasets.some(ds => ds.data?.length > 0)) {
-      console.warn(`No valid data for chart: ${canvasId}`);
-      return;
-    }
-
+   
     new Chart(ctx, {
       type: 'line',
       data: { datasets: formattedDatasets },
