--- a/treeData.html
+++ b/treeData.html
@@ -479,7 +479,7 @@
          
           drawChart("combinedTempChart", "Temperature (°C)", [
             { label: "Local Temperature", data: recentData["temperature"], color: "#f97316" },
-            { label: "Weather API Temperature", data: recentWeatherTemp, color: "#3b82f6" }
+            { label: "Weather Station Temperature", data: recentWeatherTemp, color: "#3b82f6" }
           ], false);
         
           drawChart("combinedHumChart", "Humidity (%)", [
